[build-system]
requires = [
    "setuptools>=57.4.0",
    "wheel>=0.36.2",
    "ipython>=7.20.0",
    "google-api-core==1.31.0",
    "google-auth>=1.33.0",
    "google-cloud-core>=1.7.1",
    "google-cloud-translate>=3.2.1",
    "googleapis-common-protos>=1.53.0",
    "googletrans==3.0.0",
    "requests>=2.25.1",
    "pandas>=1.2.0",
    "sortedcontainers>=2.3.0",
    "proto-plus>=1.19.0",
    "ipython>=7.20.0",
    "ipywidgets>=7.6.3"
]
build-backend = "setuptools.build_meta"