[metadata]
name = tweet-requester
version = 0.0.1
author = Torrien(https://github.com/Torrien)
author_email = ebf.beltran@gmail.com
description = Twitter API 1.1 Interaction Library with Cache
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RickyRenunciaProject/tweet_requester
project_urls =
    Bug Tracker = https://github.com/RickyRenunciaProject/tweet_requester/issues
    Project Page = https://libarchivist.com/rrp/rickyrenuncia/index
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
install_requires =[
    "ipython>=7.20.0",
    "google-api-core>=1.31.0",
    "google-auth>=1.33.0",
    "google-cloud-core>=1.7.1",
    "google-cloud-translate>=3.2.1",
    "googleapis-common-protos>=1.53.0",
    "googletrans>=3.0.0",
    "requests>=2.25.1",
    "pandas>=1.2.0",
    "sortedcontainers>=2.3.0",
    "proto-plus>=1.19.0",
    "ipython>=7.20.0",
    "ipywidgets>=7.6.3"
]
python_requires = >=3.8

[options.packages.find]
where = src